# designscribe

./: .gitignore  AGENT_INTEGRATION.md  ARCHITECTURE.md  README.md  pyproject.toml
src/designscribe/: __init__.py  __main__.py  cli.py  config.py  diagram.py  differ.py  event_log.py  graph.py  mcp_server.py  narrator.py  output.py  watcher.py
